--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
 	<meta name="renderer" content="webkit"/>
 	<title>Proxy</title>
 	<link href="/linsk1998/ting/master/ting/ting-quirks.css" rel="stylesheet"/>
-	<link href="/linsk1998/ting/master/theme/bootstrap/indigo.css" rel="stylesheet"/>
-	<script src="/linsk1998/skyjs/master/js/overload.js" type="text/javascript"></script>
-	<script src="/linsk1998/skyjs/master/js/core.js" type="text/javascript"></script>
-	<script src="/linsk1998/skyjs/master/js/extend.js" type="text/javascript"></script>
-	<script src="/linsk1998/skyjs/master/js/utils.js" type="text/javascript"></script>
+	<script src="dep.js" type="text/javascript"></script>
 	<script src="proxy.js" type="text/javascript"></script>
 </head>
 <body>
